--- a/config/manifests/bases/clair-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/clair-operator.clusterserviceversion.yaml
@@ -58,6 +58,19 @@ spec:
   - email: hdonnay@redhat.com
     name: Hank Donnay
   maturity: alpha
+  nativeAPIs:
+  - group: apps
+    kind: Deployment
+    version: v1
+  - group: ""
+    kind: ConfigMap
+    version: v1
+  - group: ""
+    kind: Secret
+    version: v1
+  - group: ""
+    kind: Service
+    version: v1
   provider:
     name: The Clair Authors
     url: https://quay.github.io/clair
