--- a/controllers/testdata/want.config.matcher.yaml
+++ b/controllers/testdata/want.config.matcher.yaml
@@ -46,6 +46,11 @@ spec:
           value: /run/clair
         - name: CLAIR_CONF
           value: /etc/clair.yaml
+        - name: GOMAXPROCS
+          valueFrom:
+            resourceFieldRef:
+              containerName: clair
+              resource: requests.cpu
         image: test/image:tag
         livenessProbe:
           httpGet:
@@ -65,6 +70,9 @@ spec:
             port: introspection
           initialDelaySeconds: 5
           periodSeconds: 10
+        resources:
+          requests:
+            cpu: "1"
         securityContext:
           allowPrivilegeEscalation: false
         startupProbe:
