docs on the templating scheme

--- a/api/v1alpha1/testdata/with_secret.yaml
+++ b/api/v1alpha1/testdata/with_secret.yaml
@@ -1,6 +1,6 @@
 ---
 indexer:
-  connstring: database+postgres:secret:default/mutation-database-creds
+  connstring: database+postgresql:secret:default/mutation-database-creds
 matcher:
   connstring: veryrealdatabase
   indexer_addr: "http://clair"
