--- a/api/v1alpha1/testdata/templating.yaml
+++ b/api/v1alpha1/testdata/templating.yaml
@@ -1,6 +1,6 @@
 ---
 indexer:
-  connstring: database+postgres:configmap:default/mutation-database-creds
+  connstring: database+postgresql:configmap:default/mutation-database-creds
 matcher:
   connstring: configmap:default/mutation-database-creds?key=PGHOST
   indexer_addr: service:default/other-clair?scheme=http
