--- a/controller/Cargo.toml
+++ b/controller/Cargo.toml
@@ -8,8 +8,12 @@ authors.workspace = true
 
 [dependencies]
 api = { path = "../api" }
-kube = { workspace = true, features = ["runtime", "client", "config"] }
+kube = { workspace = true, features = ["runtime", "client", "config", "admission"] }
 k8s-openapi = { workspace = true, features = ["v1_25"] }
+serde_yaml = { workspace = true }
+serde_json = { workspace = true }
+json-patch = { workspace = true }
+clap = { workspace = true }
 tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "io-util", "net"] }
 futures = "0.3.28"
 thiserror = "1.0.40"
@@ -18,13 +22,10 @@ tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
 anyhow = "1.0.71"
 lazy_static = "1.4.0"
 libc = "0.2.144"
-serde_yaml = { workspace = true }
-serde_json = { workspace = true }
-json-patch = { workspace = true }
 chrono = { version = "0.4.26", features = ["clock", "serde", "time"], default-features = false }
-clap = { workspace = true }
 metrics = "0.21.0"
 metrics-exporter-prometheus = "0.12.1"
+warp = { version = "0.3.5" }
 
 [build-dependencies]
 bindgen = "0.65"
