lot of bits-n-bobs
Signed-off-by: Hank Donnay <hdonnay@redhat.com>

--- a/controller/Cargo.toml
+++ b/controller/Cargo.toml
@@ -6,9 +6,13 @@ authors.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = []
+test_ci = []
+
 [dependencies]
 api = { path = "../api" }
-kube = { workspace = true, features = ["runtime", "client", "config", "admission"] }
+kube = { workspace = true, features = ["runtime", "client", "config", "admission", "openssl-tls", "ws", "gzip", "jsonpatch"] }
 k8s-openapi = { workspace = true, features = ["v1_25"] }
 serde_yaml = { workspace = true }
 serde_json = { workspace = true }
@@ -26,6 +30,13 @@ chrono = { version = "0.4.26", features = ["clock", "serde", "time"], default-fe
 metrics = "0.21.0"
 metrics-exporter-prometheus = "0.12.1"
 warp = { version = "0.3.5" }
+bytes = "1.4.0"
+iftree = "1.0.4"
+tokio-util = "0.7.8"
 
 [build-dependencies]
 bindgen = "0.65"
+
+[dev-dependencies]
+reqwest = { version = "0.11.18", features = ["json"] }
+test-log = { version = "0.2.11", default-features = false, features = ["trace"] }
