migrate the go bits, rework checks
Signed-off-by: Hank Donnay <hdonnay@redhat.com>

--- a/.config/nextest.toml
+++ b/.config/nextest.toml
@@ -1,2 +1,6 @@
 [profile.default]
 slow-timeout = { period = "30s", terminate-after = 4 }
+
+[profile.ci]
+failure-output = "immediate-final"
+fail-fast = false
