--- a/controller/Cargo.toml
+++ b/controller/Cargo.toml
@@ -11,6 +11,7 @@ default = []
 test_ci = []
 
 [dependencies]
+clair_config = { path = "../clair_config" }
 api = { path = "../api" }
 kube = { workspace = true, features = ["runtime", "client", "config", "admission", "openssl-tls", "ws", "gzip", "jsonpatch"] }
 k8s-openapi = { workspace = true, features = ["v1_25"] }
@@ -19,7 +20,7 @@ serde_json = { workspace = true }
 json-patch = { workspace = true }
 clap = { workspace = true }
 serde = { workspace = true }
-tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "io-util", "net"] }
+tokio = { workspace = true }
 futures = "0.3.28"
 thiserror = "1.0.40"
 tracing = "0.1.37"
