--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -14,3 +14,4 @@ k8s-openapi = { workspace = true, features = ["v1_25"] }
 clap = { workspace = true }
 serde_yaml = { workspace = true }
 serde_json = { workspace = true }
+signal-hook = "0.3.15"
