one more day in the yaml mines
Signed-off-by: Hank Donnay <hdonnay@redhat.com>

--- a/config/crd/clairs.projectclair.io.yaml
+++ b/config/crd/clairs.projectclair.io.yaml
@@ -151,6 +151,10 @@ spec:
                         type: string
                     type: object
                 type: object
+              image:
+                description: .
+                nullable: true
+                type: string
               notifier:
                 description: |-
                   Notifier enables the notifier subsystem.
