--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ edition = "2021"
 
 [workspace.dependencies]
 kube = { version = "0.83", default-features = false }
-k8s-openapi = { version = "0.18", default-features = false }
+k8s-openapi = { version = "0.18", default-features = false, features = ["schemars"] }
 json-patch = "1.0"
 clap = { version = "4.3", features = ["cargo", "env", "string"] }
 serde = { version = "1.0", features = ["derive"] }
