--- a/controller/Cargo.toml
+++ b/controller/Cargo.toml
@@ -35,8 +35,9 @@ warp = { version = "0.3.5", features = ["multipart"], default-features = false }
 bytes = "1.4.0"
 iftree = "1.0.4"
 tokio-util = { version = "0.7.8" }
-tokio-stream = { version = "0.1.14", features = ["net"] }
+tokio-stream = { version = "0.1.14", features = ["net", "signal"] }
 tokio-native-tls = "0.3.1"
+is-terminal = "0.4.7"
 
 [build-dependencies]
 bindgen = "0.65"
