--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,4 @@
-# Working example showing how to use nextest to reuse builds and partition test runs on GitHub Actions.
-# See workflow runs at https://github.com/nextest-rs/reuse-build-partition-example/actions/workflows/ci.yml.
-
+---
 name: CI
 
 on:
@@ -9,8 +7,8 @@ on:
   push:
     branches: [main]
   schedule:
-    # Run this every day at 01:00 UTC.
-    - cron: 0 1 * * *
+  # Run this every day at 01:00 UTC.
+  - cron: 0 1 * * *
 
 env:
   CARGO_TERM_COLOR: always
@@ -20,24 +18,33 @@ jobs:
     name: Build test artifacts
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        with:
-          # By default actions/checkout checks out a merge commit. Check out the PR head instead.
-          # https://github.com/actions/checkout#checkout-pull-request-head-commit-instead-of-merge-commit
-          ref: ${{ github.event.pull_request.head.sha }}
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          override: true
-      - name: Install nextest
-        uses: taiki-e/install-action@nextest
-      - name: Build and archive tests
-        run: cargo nextest archive -F test_ci --archive-file tests.tar.zst
-      - name: Upload archive to workflow
-        uses: actions/upload-artifact@v3
-        with:
-          name: nextest-archive
-          path: tests.tar.zst
+    - uses: actions/checkout@v2
+      with:
+        # By default actions/checkout checks out a merge commit. Check out the PR head instead.
+        # https://github.com/actions/checkout#checkout-pull-request-head-commit-instead-of-merge-commit
+        ref: ${{ github.event.pull_request.head.sha }}
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        override: true
+    - uses: actions/cache@v3
+      with:
+        path: |
+          ~/.cargo/bin/
+          ~/.cargo/registry/index/
+          ~/.cargo/registry/cache/
+          ~/.cargo/git/db/
+          target/
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+    - name: Install nextest
+      uses: taiki-e/install-action@nextest
+    - name: Build and archive tests
+      run: cargo nextest archive -F test_ci --archive-file tests.tar.zst
+    - name: Upload archive to workflow
+      uses: actions/upload-artifact@v3
+      with:
+        name: nextest-archive
+        path: tests.tar.zst
   
   run-tests-partitioned:
     name: Run tests with partitioning
@@ -47,24 +54,33 @@ jobs:
       matrix:
         partition: [1, 2]
     steps:
-      # The source directory must be checked out.
-      - uses: actions/checkout@v2
-        with:
-          # By default actions/checkout checks out a merge commit. Check out the PR head instead.
-          # https://github.com/actions/checkout#checkout-pull-request-head-commit-instead-of-merge-commit
-          ref: ${{ github.event.pull_request.head.sha }}
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          override: true
-      - name: Install nextest
-        uses: taiki-e/install-action@nextest
-      - run: mkdir -p ~/.cargo/bin
-      - name: Download archive
-        uses: actions/download-artifact@v3
-        with:
-          name: nextest-archive
-      - name: Run tests
-        run: |
-          cargo xtask ci -- \
-            --partition count:${{ matrix.partition }}/2
+    # The source directory must be checked out.
+    - uses: actions/checkout@v2
+      with:
+        # By default actions/checkout checks out a merge commit. Check out the PR head instead.
+        # https://github.com/actions/checkout#checkout-pull-request-head-commit-instead-of-merge-commit
+        ref: ${{ github.event.pull_request.head.sha }}
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        override: true
+    - uses: actions/cache@v3
+      with:
+        path: |
+          ~/.cargo/bin/
+          ~/.cargo/registry/index/
+          ~/.cargo/registry/cache/
+          ~/.cargo/git/db/
+          target/
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+    - name: Install nextest
+      uses: taiki-e/install-action@nextest
+    - run: mkdir -p ~/.cargo/bin
+    - name: Download archive
+      uses: actions/download-artifact@v3
+      with:
+        name: nextest-archive
+    - name: Run tests
+      run: |
+        cargo xtask ci -- \
+          --partition count:${{ matrix.partition }}/2
