--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -7,12 +7,13 @@ authors.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-k8s-openapi = { workspace = true, features = ["schemars"] }
-kube = { workspace = true, features = ["derive"] }
+k8s-openapi = { workspace = true }
+kube = { workspace = true }
+serde_json = { workspace = true }
+serde = { workspace = true }
+
 schemars = { version = "0.8.12", features = ["chrono"] }
-serde = { version = "1.0.163", features = ["derive"] }
-serde_json = "1.0.96"
 validator = { version = "0.16.0", features = ["derive"] }
 
 [dev-dependencies]
-k8s-openapi = { workspace = true, features = ["schemars", "v1_25"] }
+k8s-openapi = { workspace = true, features = ["v1_25"] }
