--- a/config/manager/deployment.yaml
+++ b/config/manager/deployment.yaml
@@ -1,6 +1,4 @@
 ---
-apiVersion: v1
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -21,29 +19,28 @@ spec:
       terminationGracePeriodSeconds: 10
       securityContext:
         runAsUser: 65532
+      shareProcessNamespace: true
       containers:
-        - command:
-            - /manager
-          image: controller:latest
-          name: manager
-          securityContext:
-            allowPrivilegeEscalation: false
-          livenessProbe:
-            httpGet:
-              path: /healthz
-              port: 8081
-            initialDelaySeconds: 15
-            periodSeconds: 20
-          readinessProbe:
-            httpGet:
-              path: /readyz
-              port: 8081
-            initialDelaySeconds: 5
-            periodSeconds: 10
-          resources:
-            limits:
-              cpu: 100m
-              memory: 30Mi
-            requests:
-              cpu: 100m
-              memory: 20Mi
+      - image: controller:latest
+        name: manager
+        securityContext:
+          allowPrivilegeEscalation: false
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            port: 8081
+          initialDelaySeconds: 15
+          periodSeconds: 20
+        readinessProbe:
+          httpGet:
+            path: /readyz
+            port: 8081
+          initialDelaySeconds: 5
+          periodSeconds: 10
+        resources:
+          limits:
+            cpu: 100m
+            memory: 30Mi
+          requests:
+            cpu: 100m
+            memory: 20Mi
