bunch of shuffling to fix tests
Signed-off-by: Hank Donnay <hdonnay@redhat.com>

--- a/controller/etc/templates/ingress.yaml
+++ b/controller/etc/templates/ingress.yaml
@@ -5,6 +5,9 @@ metadata:
   labels:
     app.kubernetes.io/name: clair
     app.kubernetes.io/managed-by: clair-operator
+  annotations:
+    haproxy.router.openshift.io/timeout: 5m
+    nginx.ingress.kubernetes.io/proxy-read-timeout: '300'
 spec:
   rules:
   - host: ⚠️
