--- a/.config/nextest.toml
+++ b/.config/nextest.toml
@@ -1,5 +1,6 @@
 [profile.default]
 slow-timeout = { period = "30s", terminate-after = 4 }
+status-level = "all"
 
 [profile.ci]
 failure-output = "immediate-final"
