--- a/controller/Cargo.toml
+++ b/controller/Cargo.toml
@@ -26,6 +26,7 @@ serde_json = { workspace = true }
 serde = { workspace = true }
 serde_yaml = { workspace = true }
 tokio = { workspace = true }
+tokio-stream = { workspace = true }
 tracing =  { workspace = true }
 
 anyhow = "1.0.71"
@@ -37,7 +38,6 @@ lazy_static = "1.4.0"
 metrics-exporter-prometheus = "0.12.1"
 thiserror = "1.0.40"
 tokio-native-tls = "0.3.1"
-tokio-stream = { version = "0.1.14", features = ["net", "signal"] }
 tokio-util = { version = "0.7.8" }
 tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
 
