--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -15,3 +15,5 @@ clap = { workspace = true }
 serde_yaml = { workspace = true }
 serde_json = { workspace = true }
 signal-hook = "0.3.15"
+xshell = "0.2.3"
+scopeguard = "1.1.0"
