--- a/config/rbac/clair_editor_role.yaml
+++ b/config/rbac/clair_editor_role.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: indexer-editor-role
+  name: clair-editor-role
 rules:
 - apiGroups:
   - projectclair.io
