--- a/controller/Cargo.toml
+++ b/controller/Cargo.toml
@@ -40,6 +40,7 @@ thiserror = "1.0.40"
 tokio-native-tls = "0.3.1"
 tokio-util = { version = "0.7.8" }
 tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
+axum = { version = "0.6.18", features = ["http1", "json", "tracing"] }
 
 [dev-dependencies]
 reqwest = { version = "0.11.18", features = ["json"] }
