--- a/etc/operator/config/manager/kustomization.yaml
+++ b/etc/operator/config/manager/kustomization.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
@@ -16,5 +15,5 @@ generatorOptions:
 
 images:
 - name: controller
-  newName: controller
-  newTag: latest
+  newName: quay.io/projectclair/clair-bundle
+  newTag: 0.1.0
