--- a/webhook/Cargo.toml
+++ b/webhook/Cargo.toml
@@ -18,6 +18,7 @@ k8s-openapi = { workspace = true }
 kube = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
+serde = { workspace = true }
 
 axum = { version = "0.6", features = [ "tracing" ] }
 bytes = "1.4.0"
