--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,5 @@
 [workspace]
+resolver = "2"
 members = [
 	"api",
 	"clair_config",
@@ -19,19 +20,19 @@ authors = ["The clair-operator Authors"]
 edition = "2021"
 
 [workspace.dependencies]
-clap = { version = "4.3", features = ["cargo", "env", "string"] }
-futures = "0.3.28"
-hyper = { version = "0.14.26", features = ["server", "http1"] }
+clap = { version = "4.4", features = ["cargo", "env", "string"] }
+futures = "0.3"
+hyper = { version = "0.14", features = ["server", "http1"] }
 json-patch = "1.0"
-k8s-openapi = { version = "0.18", default-features = false, features = ["schemars"] }
-kube = { version = "0.83", features = ["runtime", "derive", "client", "config", "admission", "openssl-tls", "ws", "gzip", "jsonpatch"] }
-metrics = "0.21.0"
+k8s-openapi = { version = "0.20", default-features = false, features = ["schemars"] }
+kube = { version = "0.86", features = ["runtime", "derive", "client", "config", "admission", "openssl-tls", "ws", "gzip", "jsonpatch"] }
+metrics = "0.21"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
-tokio = { version = "1.28.2", features = ["full"] }
-tokio-stream = { version = "0.1.14", features = ["net", "signal"] }
-tracing = "0.1.37"
+tokio = { version = "1.28", features = ["full"] }
+tokio-stream = { version = "0.1", features = ["net", "signal"] }
+tracing = "0.1"
 
 [profile.dev]
 split-debuginfo = "unpacked"
