all: start using DeepMerge
Signed-off-by: Hank Donnay <hdonnay@redhat.com>

--- a/controller/etc/templates/ingress.yaml
+++ b/controller/etc/templates/ingress.yaml
@@ -1,7 +1,6 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ⚠️
   labels:
     app.kubernetes.io/name: clair
     app.kubernetes.io/managed-by: clair-operator
@@ -10,27 +9,23 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-read-timeout: '300'
 spec:
   rules:
-  - host: ⚠️
-    http:
+  - http:
       paths:
       - path: /indexer
         pathType: Prefix
         backend:
           service:
-            name: ⚠️-indexer
             port:
               name: api
       - path: /matcher
         pathType: Prefix
         backend:
           service:
-            name: ⚠️-matcher
             port:
               name: api
       - path: /notifier
         pathType: Prefix
         backend:
           service:
-            name: ⚠️-notifier
             port:
               name: api
