--- a/clair_config/Cargo.toml
+++ b/clair_config/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "clair_config"
+license.workspace = true
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
