--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
 name = "api"
+license.workspace = true
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 k8s-openapi = { workspace = true }
