--- a/controller/Cargo.toml
+++ b/controller/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
 name = "controller"
+license.workspace = true
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
 default = []
@@ -31,7 +30,7 @@ tracing =  { workspace = true }
 
 anyhow = "1.0.71"
 bytes = "1.4.0"
-chrono = { version = "0.4.26", features = ["clock", "serde", "time"], default-features = false }
+chrono = { version = "0.4.26", features = ["clock", "serde"], default-features = false }
 iftree = "1.0.4"
 is-terminal = "0.4.7"
 lazy_static = "1.4.0"
