--- a/clair_config/Cargo.toml
+++ b/clair_config/Cargo.toml
@@ -9,7 +9,7 @@ authors.workspace = true
 api = { path = "../api" }
 
 json-patch = { workspace = true }
-k8s-openapi = { workspace = true, features = ["v1_25"] }
+k8s-openapi = { workspace = true , features = ["schemars"] }
 serde_json = { workspace = true }
 serde_yaml = { workspace = true }
 tokio = { workspace = true }
@@ -18,7 +18,5 @@ libc = "0.2"
 tracing = "0.1"
 
 [build-dependencies]
-bindgen = "0.69"
+bindgen = "0.71"
 serde = { workspace = true }
-
-[dev-dependencies]
